Adding Pages, Forms, and Cards

--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
             </button>
             <div class="collapse navbar-collapse" id="mmcNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#">Menu</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Menu</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="reservation.html">Reservations</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
@@ -43,64 +43,43 @@
     </nav>
     
     <div class="container">
-        <div class="row row-content text-center">
-            <div id="menu" class="col">
-                <h2>Menu</h2>
+        <div class="row text-center">
+            <div id="about" class="col">
+                <h2>What should I expect?</h2>
             </div>
         </div>
     </div>
     
     <div class="container">
-        <div class="row row-content align-items-center">
-            <div class="col-sm-4 order-sm-last col-md-3">
-                <h2 class="text-sm-right">Meals</h2>
-            </div>
-            <div class="col">
-                <div class="media-body align-self-center">
-                    <h3>Omelet</h3>
-                    <p class="d-none d-sm-block">A cute ketchup drawing on your choice of omelet.</p>
-                    <p >$10</p>
-                    <h3>Cutlets</h3>
-                    <p class="d-none d-sm-block">Your choice of pork, chicken, or beef. Served with a side of rice.</p>
-                    <p>$12</p>
-                    <h3>Curry</h3>
-                    <p class="d-none d-sm-block">Served with a side of rice.</p>
-                    <p>$14</p>
-                </div>
+        <div class="row row-content">
+            <div class="col text-center text-sm-center">
+                    <h3>A Warm Welcome</h3>
+                    <p class="d-none d-sm-block">Our maids will greet you at the entrance and take you to your seat.</p>
+                    <h3>Adorable Delicious Food</h3>
+                    <p class="d-none d-sm-block">Writing with ketchup or ask for a drawing! We're happy to please. You'll definitely see lots of kawaii animals!</p>
+                    <h3>Cute Outfits</h3>
+                    <p class="d-none d-sm-block">Our maids wear between 3 dress types: 
+                        <ul class="list-unstyled">
+                            <li class="d-none d-sm-block">classic (long)</li>
+                            <li class="d-none d-sm-block">French (short)</li>
+                            <li class="d-none d-sm-block">hime-lolita inspired (more frilly and colorful)</li>
+                        </ul>
+                    </p>
             </div>
         </div>
 
         <div class="row row-content align-items-center">
-            <div class="col-sm-4 col-md-3">
-                <h2>Sweets</h2>
+            <div class="col-sm-3 text-sm-center col-md">
+                <h2>Rules</h2>
             </div>
-            <div class="col">
-                <h3>Macarons</h3>
-                <p class="d-none d-sm-block"></p>
-                <p>$4</p>
-                <h3>Roll Cake</h3>
-                <p class="d-none d-sm-block"></p>
-                <p>$6</p>
-                <h3>Taiyaki</h3>
-                <p class="d-none d-sm-block"></p>
-                <p>$5</p>
-            </div>
-        </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-sm-4 order-sm-last col-md-3">
-                <h2 class="text-sm-right">Drinks</h2>
-            </div>
-            <div class="col">
-                <h3>Tea</h3>
-                <p class="d-none d-sm-block">A choice of Green, Black, or Jasmine.</p>
-                <p>$3</p>
-                <h3>Frappes</h3>
-                <p class="d-none d-sm-block">Vanilla, Caramel, or Chocolate</p>
-                <p>$5</p>
-                <h3>Cappuccino</h3>
-                <p class="d-none d-sm-block">Let us know what art you'd like!</p>
-                <p>$6</p>
+            <div class="col-sm-7">
+                <ol>
+                    <li>Please be respectful and not touch our maids.</li>
+                    <li>Don't ask the maids for their contact information.</li>
+                    <li>No pictures of the maids.</li>
+                    <li>No outside food or drink.</li>
+                    <li>No violent or sexual requests.</li>
+                </ol>
             </div>
         </div>
     </div>
@@ -114,8 +93,8 @@
                 <div class="col-4 col-sm-2 offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-secondary">Menu</a></li>
-                        <li><a href="about.html" class="text-secondary">About</a></li>
+                        <li><a href="index.html" class="text-secondary">Menu</a></li>
+                        <li><a href="#" class="text-secondary">About</a></li>
                         <li><a href="reservation.html" class="text-secondary">Reservations</a></li>
                         <li><a href="#" class="text-secondary">Careers</a></li>
                         <li><a href="#" class="text-secondary">Contact</a></li>
