--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Menu</a></li>
                     <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="reservation.html">Reservations</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
+                    <li class="nav-item"><a class="nav-link" href="careers.html">Careers</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                 </ul>
             </div>
@@ -96,7 +96,7 @@
                         <li><a href="index.html" class="text-secondary">Menu</a></li>
                         <li><a href="#" class="text-secondary">About</a></li>
                         <li><a href="reservation.html" class="text-secondary">Reservations</a></li>
-                        <li><a href="#" class="text-secondary">Careers</a></li>
+                        <li><a href="careers.html" class="text-secondary">Careers</a></li>
                         <li><a href="#" class="text-secondary">Contact</a></li>
                     </ul>
                 </div>
