--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li class="nav-item active"><a class="nav-link" href="#">Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="reservation.html">Reservations</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
+                    <li class="nav-item"><a class="nav-link" href="careers.html">Careers</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                 </ul>
             </div>
@@ -56,17 +56,29 @@
                 <h2 class="text-sm-right">Meals</h2>
             </div>
             <div class="col">
-                <div class="media-body align-self-center">
-                    <h3>Omelet</h3>
-                    <p class="d-none d-sm-block">A cute ketchup drawing on your choice of omelet.</p>
-                    <p >$10</p>
-                    <h3>Cutlets</h3>
-                    <p class="d-none d-sm-block">Your choice of pork, chicken, or beef. Served with a side of rice.</p>
-                    <p>$12</p>
-                    <h3>Curry</h3>
-                    <p class="d-none d-sm-block">Served with a side of rice.</p>
-                    <p>$14</p>
-                </div>
+                <div class="card-deck align-self-center">
+                    <div class="card" id="menuCard">
+                        <div class="card-body text-center">
+                            <h3>Omelet</h3>
+                            <p class="d-none d-sm-block">A cute ketchup drawing on your choice of omelet.</p>
+                            <p >$10</p>
+                        </div>
+                    </div>
+                    <div class="card" id="menuCard">
+                        <div class="card-body text-center">
+                            <h3>Cutlets</h3>
+                            <p class="d-none d-sm-block">Your choice of pork, chicken, or beef. Served with a side of rice.</p>
+                            <p>$12</p>
+                        </div>
+                    </div>
+                    <div class="card" id="menuCard">
+                        <div class="card-body text-center">
+                            <h3>Curry</h3>
+                            <p class="d-none d-sm-block">Served with a side of rice.</p>
+                            <p class="">$14</p>
+                        </div>
+                    </div>
+                </div>        
             </div>
         </div>
 
@@ -75,15 +87,27 @@
                 <h2>Sweets</h2>
             </div>
             <div class="col">
-                <h3>Macarons</h3>
-                <p class="d-none d-sm-block"></p>
-                <p>$4</p>
-                <h3>Roll Cake</h3>
-                <p class="d-none d-sm-block"></p>
-                <p>$6</p>
-                <h3>Taiyaki</h3>
-                <p class="d-none d-sm-block"></p>
-                <p>$5</p>
+                <div class="card-deck" id="menuCard">
+                    <div class="card-body text-center">
+                        <h3>Macarons</h3>
+                        <p class="d-none d-sm-block"></p>
+                        <p>$4</p>
+                    </div>
+                </div>
+                <div class="card" id="menuCard">
+                    <div class="card-body text-center">
+                        <h3>Roll Cake</h3>
+                        <p class="d-none d-sm-block"></p>
+                        <p>$6</p>
+                    </div>
+                </div>
+                <div class="card" id="menuCard">
+                    <div class="card-body text-center">
+                        <h3>Taiyaki</h3>
+                        <p class="d-none d-sm-block"></p>
+                        <p>$5</p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -117,7 +141,7 @@
                         <li><a href="#" class="text-secondary">Menu</a></li>
                         <li><a href="about.html" class="text-secondary">About</a></li>
                         <li><a href="reservation.html" class="text-secondary">Reservations</a></li>
-                        <li><a href="#" class="text-secondary">Careers</a></li>
+                        <li><a href="careers.html" class="text-secondary">Careers</a></li>
                         <li><a href="#" class="text-secondary">Contact</a></li>
                     </ul>
                 </div>
