Menu Cards and Rules Modal

--- a/index.html
+++ b/index.html
@@ -58,24 +58,28 @@
             <div class="col">
                 <div class="card-deck align-self-center">
                     <div class="card" id="menuCard">
+                        <img src="img/omeletlove.jpg" alt="A cute ketchup heart with love written on an omelet" class="img-fluid rounded" />
                         <div class="card-body text-center">
                             <h3>Omelet</h3>
-                            <p class="d-none d-sm-block">A cute ketchup drawing on your choice of omelet.</p>
                             <p >$10</p>
+                            <p class="d-none d-sm-block">A cute ketchup drawing on your choice of omelet.</p>
+                            
                         </div>
                     </div>
                     <div class="card" id="menuCard">
+                        <img src="img/cutletricebear.jpg" alt="A cute rice bear with a cutlet blanket" class="img-fluid rounded" />
                         <div class="card-body text-center">
                             <h3>Cutlets</h3>
-                            <p class="d-none d-sm-block">Your choice of pork, chicken, or beef. Served with a side of rice.</p>
                             <p>$12</p>
+                            <p class="d-none d-sm-block">Your choice of pork, chicken, or beef. Served with a side of rice.</p>
                         </div>
                     </div>
                     <div class="card" id="menuCard">
+                        <img src="img/kawaiicurry.jpg" alt="Rice ball pandas eating curry" class="img-fluid rounded" />
                         <div class="card-body text-center">
                             <h3>Curry</h3>
-                            <p class="d-none d-sm-block">Served with a side of rice.</p>
                             <p class="">$14</p>
+                            <p class="d-none d-sm-block">Served with a side of rice.</p>
                         </div>
                     </div>
                 </div>        
@@ -86,26 +90,29 @@
             <div class="col-sm-4 col-md-3">
                 <h2>Sweets</h2>
             </div>
-            <div class="col">
-                <div class="card-deck" id="menuCard">
+            <div class="col card-deck">
+                <div class="card" id="menuCard">
+                    <img src="img/sakuramacarons.jpg" alt="Cherry blossom shaped macarons" class="img-fluid rounded" />
                     <div class="card-body text-center">
-                        <h3>Macarons</h3>
-                        <p class="d-none d-sm-block"></p>
+                        <h3 class="text-nowrap">Macarons</h3>
                         <p>$4</p>
-                    </div>
-                </div>
-                <div class="card" id="menuCard">
-                    <div class="card-body text-center">
-                        <h3>Roll Cake</h3>
                         <p class="d-none d-sm-block"></p>
-                        <p>$6</p>
                     </div>
                 </div>
                 <div class="card" id="menuCard">
+                    <img src="img/strawberryrollcake.jpg" alt="Pink roll cake with strawberry design" class="img-fluid rounded" />
+                    <div class="card-body text-center">
+                        <h3 class="text-nowrap">Roll Cake</h3>
+                        <p>$6</p>
+                        <p class="d-none d-sm-block"></p>
+                    </div>
+                </div>
+                <div class="card" id="menuCard">
+                    <img src="img/kawaiitaiyaki.jpg" alt="Taiyaki sunday cones" class="img-fluid rounded" />
                     <div class="card-body text-center">
                         <h3>Taiyaki</h3>
-                        <p class="d-none d-sm-block"></p>
                         <p>$5</p>
+                        <p class="d-none d-sm-block"></p>
                     </div>
                 </div>
             </div>
@@ -115,16 +122,31 @@
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Drinks</h2>
             </div>
-            <div class="col">
-                <h3>Tea</h3>
-                <p class="d-none d-sm-block">A choice of Green, Black, or Jasmine.</p>
-                <p>$3</p>
-                <h3>Frappes</h3>
-                <p class="d-none d-sm-block">Vanilla, Caramel, or Chocolate</p>
-                <p>$5</p>
-                <h3>Cappuccino</h3>
-                <p class="d-none d-sm-block">Let us know what art you'd like!</p>
-                <p>$6</p>
+            <div class="col card-deck card-deck-responsive">
+                <div class="card" id="menuCard">
+                    <img src="img/tea.jpg" alt="Elegant floral tea cup with cherry blossoms in it" class="card-img-top img-fluid rounded" height="150px" />
+                    <div class="card-body text-center">
+                        <h3>Tea</h3>
+                        <p class="d-none d-sm-block">A choice of Green, Black, or Jasmine.</p>
+                        <p>$3</p>
+                    </div>
+                </div>
+                <div class="card" id="menuCard">
+                    <img src="img/frappe.jpg" alt="Pink frappuccino in a tea cup" class="img-fluid rounded" height="150px" />
+                    <div class="card-body text-center">
+                        <h3>Frappes</h3>
+                        <p class="d-none d-sm-block">Vanilla, Caramel, or Chocolate</p>
+                        <p>$5</p>
+                    </div>
+                </div>
+                <div class="card" id="menuCard">
+                    <img src="img/cappuccino.jpg" alt="Delicious cappuccino with foam art of a shiba inu" class="img-fluid rounded" height="150px" />
+                    <div class="card-body text-center">
+                        <h3 class="text-nowrap">Cappuccino</h3>
+                        <p class="d-none d-sm-block">Let us know what art you'd like!</p>
+                        <p>$6</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
