Contact Page and Cleanup

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="card-body text-center">
                             <h3>Omelet</h3>
                             <p >$10</p>
-                            <p class="d-none d-sm-block">A cute ketchup drawing on your choice of omelet.</p>
+                            <!-- <p class="d-none d-sm-block">A cute ketchup drawing on your choice of omelet.</p> -->
                             
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                         <div class="card-body text-center">
                             <h3>Cutlets</h3>
                             <p>$12</p>
-                            <p class="d-none d-sm-block">Your choice of pork, chicken, or beef. Served with a side of rice.</p>
+                            <!-- <p class="d-none d-sm-block">Your choice of pork, chicken, or beef. Served with a side of rice.</p> -->
                         </div>
                     </div>
                     <div class="card" id="menuCard">
@@ -79,7 +79,7 @@
                         <div class="card-body text-center">
                             <h3>Curry</h3>
                             <p class="">$14</p>
-                            <p class="d-none d-sm-block">Served with a side of rice.</p>
+                            <!-- <p class="d-none d-sm-block">Served with a side of rice.</p> -->
                         </div>
                     </div>
                 </div>        
@@ -96,7 +96,7 @@
                     <div class="card-body text-center">
                         <h3 class="text-nowrap">Macarons</h3>
                         <p>$4</p>
-                        <p class="d-none d-sm-block"></p>
+                        <!--<p class="d-none d-sm-block"></p> -->
                     </div>
                 </div>
                 <div class="card" id="menuCard">
@@ -104,7 +104,7 @@
                     <div class="card-body text-center">
                         <h3 class="text-nowrap">Roll Cake</h3>
                         <p>$6</p>
-                        <p class="d-none d-sm-block"></p>
+                        <!-- <p class="d-none d-sm-block"></p> -->
                     </div>
                 </div>
                 <div class="card" id="menuCard">
@@ -112,7 +112,7 @@
                     <div class="card-body text-center">
                         <h3>Taiyaki</h3>
                         <p>$5</p>
-                        <p class="d-none d-sm-block"></p>
+                        <!-- <p class="d-none d-sm-block"></p> -->
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                     <img src="img/tea.jpg" alt="Elegant floral tea cup with cherry blossoms in it" class="card-img-top img-fluid rounded" height="150px" />
                     <div class="card-body text-center">
                         <h3>Tea</h3>
-                        <p class="d-none d-sm-block">A choice of Green, Black, or Jasmine.</p>
+                        <!-- <p class="d-none d-sm-block">Green, Black, or Jasmine.</p> -->
                         <p>$3</p>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                     <img src="img/frappe.jpg" alt="Pink frappuccino in a tea cup" class="img-fluid rounded" height="150px" />
                     <div class="card-body text-center">
                         <h3>Frappes</h3>
-                        <p class="d-none d-sm-block">Vanilla, Caramel, or Chocolate</p>
+                        <!-- <p class="d-none d-sm-block">Vanilla, Caramel, or Chocolate</p> -->
                         <p>$5</p>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                     <img src="img/cappuccino.jpg" alt="Delicious cappuccino with foam art of a shiba inu" class="img-fluid rounded" height="150px" />
                     <div class="card-body text-center">
                         <h3 class="text-nowrap">Cappuccino</h3>
-                        <p class="d-none d-sm-block">Let us know what art you'd like!</p>
+                        <!-- <p class="d-none d-sm-block">Let us know what art you'd like!</p> -->
                         <p>$6</p>
                     </div>
                 </div>
