--- a/reservation.html
+++ b/reservation.html
@@ -36,7 +36,7 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item active"><a class="nav-link" href="#">Reservations</a></li>
                     <li class="nav-item"><a class="nav-link" href="careers.html">Careers</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -70,11 +70,11 @@
         
             <div class="row-content">
                 <div class="card " id="reserveCard">
-                    <div class="card-header" id="reserveHeadCard">
+                    <div class="card-header">
                         <h3>Book a Reservation</h3>
                     </div>
                     <div class="card-body">
-                        <form class="">
+                        <form>
                             <div class="row form-group">
                                 <label for="firstName" class="col-md-2 col-form-label">First Name</label>
                                     <div class="col-md-10">
@@ -109,12 +109,12 @@
                                         <input type="number" class="form-control" id="partySize" name="partySize" placeholder="How many?" />
                                     </div>
                                     
-                                    <label for="date" class="col col-sm-1 col-form-label">Date</label>
+                                    <label for="date" class="col col-sm-1 col-form-label text-nowrap">Date</label>
                                     <div class="col-xs-4 col-md-2">
                                         <input class="form-control" type="date" name="date" id="date" placeholder="date">
                                     </div>
 
-                                    <label for="time" class="col col-sm-1 col-form-label">Time</label>
+                                    <label for="time" class="col col-sm-1 col-form-label text-nowrap">Time</label>
                                     <div class="col-xs-4 col-md-2">
                                         <input class="form-control" type="time" name="time" id="time" placeholder="time">
                                     </div>
@@ -169,7 +169,7 @@
                         <li><a href="about.html" class="text-secondary">About</a></li>
                         <li><a href="#" class="text-secondary">Reservations</a></li>
                         <li><a href="careers.html" class="text-secondary">Careers</a></li>
-                        <li><a href="#" class="text-secondary">Contact</a></li>
+                        <li><a href="contactus.html" class="text-secondary">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center">
