--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                     <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="reservation.html">Reservations</a></li>
                     <li class="nav-item"><a class="nav-link" href="careers.html">Careers</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -90,25 +90,21 @@
     <div class="container">
         <div class="row row-content">
             <div class="col text-center text-sm-center">
-                    <h3>A Warm Welcome</h3>
-                    <p class="d-none d-sm-block">Our maids will greet you at the entrance and take you to your seat.</p>
-                    <h3>Adorable Delicious Food</h3>
-                    <p class="d-none d-sm-block">Writing with ketchup or ask for a drawing! We're happy to please. You'll definitely see lots of kawaii animals!</p>
-                    <h3>Cute Outfits</h3>
-                    <p class="d-none d-sm-block">Our maids wear between 3 dress types: 
-                        <ul class="list-unstyled">
-                            <li class="d-none d-sm-block">classic (long)</li>
-                            <li class="d-none d-sm-block">French (short)</li>
-                            <li class="d-none d-sm-block">hime-lolita inspired (more frilly and colorful)</li>
-                        </ul>
-                    </p>
+                <h3>A Warm Welcome</h3>
+                <p class="d-none d-sm-block">Our maids will greet you at the entrance and take you to your seat.</p>
+                <h3>Adorable Delicious Food</h3>
+                <p class="d-none d-sm-block">Writing with ketchup or ask for a drawing! We're happy to please. You'll definitely see lots of kawaii animals!</p>
+                <h3>Cute Outfits</h3>
+                <p class="d-none d-sm-block">Our maids wear between 3 dress types: 
+                    <ul class="list-unstyled">
+                        <li class="d-none d-sm-block">classic (long)</li>
+                        <li class="d-none d-sm-block">French (short)</li>
+                        <li class="d-none d-sm-block">hime-lolita inspired (more frilly and colorful)</li>
+                    </ul>
+                </p>
             </div>
         </div>
-
-        
     </div>
-
-    
 
 
     <footer class="site-footer">
@@ -121,7 +117,7 @@
                         <li><a href="#" class="text-secondary">About</a></li>
                         <li><a href="reservation.html" class="text-secondary">Reservations</a></li>
                         <li><a href="careers.html" class="text-secondary">Careers</a></li>
-                        <li><a href="#" class="text-secondary">Contact</a></li>
+                        <li><a href="contactus.html" class="text-secondary">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center">
