Custom File Input Styling

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                             <li>Don't ask the maids for their contact information.</li>
                             <li>No pictures of the maids.</li>
                             <li>No outside food or drink.</li>
-                            <li>No violent or sexual requests.</li>
+                            <li>No violent or provocative requests.</li>
                         </ol>
                     </div>
                     <div class="col text-right">
