--- a/careers.html
+++ b/careers.html
@@ -106,7 +106,7 @@
                             <div class="form-group row">
                                 <label for="resume" class="col-md-2 col-form-label text-nowrap">Upload Resume</label>
                                 <div class="col-md-10">
-                                    <input type="file" class="form-control-file text-secondary mt-2" id="resume" name="resume" />
+                                    <input type="file" class="form-control-file custom-file text-secondary mt-2" id="resume" name="resume" />
                                 </div>
                             </div>
 
