--- a/index.html
+++ b/index.html
@@ -50,36 +50,33 @@
         </div>
     </div>
     
-    <div class="container">
+    <div class="container" id="menuCard">
         <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Meals</h2>
             </div>
             <div class="col">
                 <div class="card-deck align-self-center">
-                    <div class="card" id="menuCard">
+                    <div class="card">
                         <img src="img/omeletlove.jpg" alt="A cute ketchup heart with love written on an omelet" class="img-fluid rounded" />
                         <div class="card-body text-center">
                             <h3>Omelet</h3>
                             <p >$10</p>
-                            <!-- <p class="d-none d-sm-block">A cute ketchup drawing on your choice of omelet.</p> -->
                             
                         </div>
                     </div>
-                    <div class="card" id="menuCard">
+                    <div class="card">
                         <img src="img/cutletricebear.jpg" alt="A cute rice bear with a cutlet blanket" class="img-fluid rounded" />
                         <div class="card-body text-center">
                             <h3>Cutlets</h3>
                             <p>$12</p>
-                            <!-- <p class="d-none d-sm-block">Your choice of pork, chicken, or beef. Served with a side of rice.</p> -->
                         </div>
                     </div>
-                    <div class="card" id="menuCard">
+                    <div class="card">
                         <img src="img/kawaiicurry.jpg" alt="Rice ball pandas eating curry" class="img-fluid rounded" />
                         <div class="card-body text-center">
                             <h3>Curry</h3>
                             <p class="">$14</p>
-                            <!-- <p class="d-none d-sm-block">Served with a side of rice.</p> -->
                         </div>
                     </div>
                 </div>        
@@ -91,28 +88,25 @@
                 <h2>Sweets</h2>
             </div>
             <div class="col card-deck">
-                <div class="card" id="menuCard">
+                <div class="card">
                     <img src="img/sakuramacarons.jpg" alt="Cherry blossom shaped macarons" class="img-fluid rounded" />
                     <div class="card-body text-center">
                         <h3 class="text-nowrap">Macarons</h3>
                         <p>$4</p>
-                        <!--<p class="d-none d-sm-block"></p> -->
                     </div>
                 </div>
-                <div class="card" id="menuCard">
+                <div class="card">
                     <img src="img/strawberryrollcake.jpg" alt="Pink roll cake with strawberry design" class="img-fluid rounded" />
                     <div class="card-body text-center">
                         <h3 class="text-nowrap">Roll Cake</h3>
                         <p>$6</p>
-                        <!-- <p class="d-none d-sm-block"></p> -->
                     </div>
                 </div>
-                <div class="card" id="menuCard">
+                <div class="card">
                     <img src="img/kawaiitaiyaki.jpg" alt="Taiyaki sunday cones" class="img-fluid rounded" />
                     <div class="card-body text-center">
                         <h3>Taiyaki</h3>
                         <p>$5</p>
-                        <!-- <p class="d-none d-sm-block"></p> -->
                     </div>
                 </div>
             </div>
@@ -123,27 +117,24 @@
                 <h2 class="text-sm-right">Drinks</h2>
             </div>
             <div class="col card-deck card-deck-responsive">
-                <div class="card" id="menuCard">
+                <div class="card">
                     <img src="img/tea.jpg" alt="Elegant floral tea cup with cherry blossoms in it" class="card-img-top img-fluid rounded" height="150px" />
                     <div class="card-body text-center">
                         <h3>Tea</h3>
-                        <!-- <p class="d-none d-sm-block">Green, Black, or Jasmine.</p> -->
                         <p>$3</p>
                     </div>
                 </div>
-                <div class="card" id="menuCard">
+                <div class="card">
                     <img src="img/frappe.jpg" alt="Pink frappuccino in a tea cup" class="img-fluid rounded" height="150px" />
                     <div class="card-body text-center">
                         <h3>Frappes</h3>
-                        <!-- <p class="d-none d-sm-block">Vanilla, Caramel, or Chocolate</p> -->
                         <p>$5</p>
                     </div>
                 </div>
-                <div class="card" id="menuCard">
+                <div class="card">
                     <img src="img/cappuccino.jpg" alt="Delicious cappuccino with foam art of a shiba inu" class="img-fluid rounded" height="150px" />
                     <div class="card-body text-center">
                         <h3 class="text-nowrap">Cappuccino</h3>
-                        <!-- <p class="d-none d-sm-block">Let us know what art you'd like!</p> -->
                         <p>$6</p>
                     </div>
                 </div>
