--- a/contactus.html
+++ b/contactus.html
@@ -60,14 +60,16 @@
                     <h3>Contact Us</h3>
                 </div>
                 
-                <div class="card-body">
+                <div class="card-body text-secondary">
                     <div class="col">
-                        <Address id="address">
-                            1234 Lovely Ln. <br/>
-                            Austin, TX 78746
+                        <Address id="address"> 
+                            <a href="https://www.googlemaps.com/" target="_blank">
+                                1234 Lovely Ln. <br/>
+                                Austin, TX 78746
+                            </a>
                         </Address>
-                        <a role="button" class="btn btn-lg btn-link text-secondary" href="tel:+15125551234"><i class="fa fa-phone"></i></a>
-                        <a role="button" class="btn btn-lg btn-link text-secondary" href="mailto:mostaryasmaidcafe.co"><i class="fa fa-envelope-o"></i></a>
+                        <a role="button" class="btn btn-lg btn-link" href="tel:+15125551234"><i class="fa fa-phone"></i></a>
+                        <a role="button" class="btn btn-lg btn-link" href="mailto:mostaryasmaidcafe.co"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
             </div>
