SCSS and NPM Scripts

--- a/contactus.html
+++ b/contactus.html
@@ -54,7 +54,7 @@
     
 
     <div class="row-content text-center">
-        <div class="container card-deck text-nowrap" id="contactCardDeck">
+        <div class="container text-nowrap" id="contactCardDeck">
             <div class="card col-xs-12" id="contactCard">
                 <div class="card-header">
                     <h3>Contact Us</h3>
