--- a/reservation.html
+++ b/reservation.html
@@ -191,5 +191,6 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <script src="js/scripts.js"></script>
 </body>
 </html>
